Update API endpoints, components, and configuration files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,12 +21,11 @@
     "**/*.ts",
     "**/*.tsx",
     "**/*.vue",
-    ".nuxt/**/*"
+    ".nuxt/**/*.d.ts"
   ],
   "exclude": [
     "node_modules",
     "dist",
-    ".nuxt",
     ".output"
   ]
 }
