Update project files

--- a/package.json
+++ b/package.json
@@ -39,6 +39,11 @@
     "format:html": "prettier --write \"**/*.html\" --ignore-path .prettierignore",
     "format:css": "prettier --write \"**/*.css\" --ignore-path .prettierignore",
     "format:json": "prettier --write \"**/*.json\" --ignore-path .prettierignore",
+    "ts:check": "vue-tsc --noEmit",
+    "ts:fix": "npm run format:js && npm run ts:check",
+    "typecheck": "vue-tsc --noEmit",
+    "lint": "npm run ts:check && npm run lint:html && npm run format:check",
+    "lint:fix": "npm run format:js && npm run format:html && npm run format:css && npm run ts:check && npm run lint:html",
     "lint:html": "htmlhint web-gui/public/**/*.html",
     "lint:html:json": "htmlhint web-gui/public/**/*.html --format json",
     "lint:html:compact": "htmlhint web-gui/public/**/*.html --format compact",
