--- a/package.json
+++ b/package.json
@@ -50,6 +50,9 @@
     "lint:html:validate": "html-validate web-gui/public/**/*.html",
     "review": "powershell -ExecutionPolicy Bypass -File ./scripts/powershell/run-review.ps1",
     "review:quick": "powershell -ExecutionPolicy Bypass -File ./scripts/powershell/run-review.ps1 -quick",
+    "analyze:ollama": "powershell -ExecutionPolicy Bypass -File ./scripts/powershell/analyze-code-with-ollama.ps1",
+    "analyze:codebase": "powershell -ExecutionPolicy Bypass -File ./scripts/powershell/review-codebase-with-ollama.ps1",
+    "analyze:quick": "powershell -ExecutionPolicy Bypass -File ./scripts/powershell/review-codebase-with-ollama.ps1 -Quick -MaxFiles 5",
     "prepare": "husky"
   },
   "dependencies": {
